--- a/preamble.tex
+++ b/preamble.tex
@@ -241,6 +241,7 @@
 \declaretheorem[style=thmredbox, name=Formodning, numberlike=mycounter]{conjecture}
 \declaretheorem[style=thmbluebox, name=Påstand, numberlike=mycounter]{claim}
 \declaretheorem[style=thmbluebox, name=Eksempel, numberlike=mycounter]{example}
+\declaretheorem[style=thmbluebox, name=Opgave, numberlike=mycounter]{exercise}
 
 \let\oldproof\proof
 \let\endoldproof\endproof
